# pst-dedupe

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/dedup-engine/: Cargo.toml
crates/dedup-engine/examples/: scan_pst.rs
crates/dedup-engine/src/: eml_pack.rs  exporter.rs  hasher.rs  index.rs  integrity.rs  keepset.rs  lib.rs  report.rs  util.rs
crates/dedupe-desk/: Cargo.toml  README.md
crates/dedupe-desk/src/: app.rs  cluster_ui.rs  conversation_ui.rs  dialogs.rs  gap_ui.rs  html_strip.rs  main.rs  matter_ops.rs  matter_ui.rs  nav.rs  params.rs  people_ui.rs  produce_qc.rs  progress_ui.rs  review_body.rs  review_nav.rs  review_notes.rs  review_privilege.rs  review_redaction.rs  review_ui.rs  settings.rs  workspace.rs
crates/extract-calendar/: Cargo.toml  README.md
crates/extract-calendar/src/: detect.rs  error.rs  extract.rs  lib.rs  limits.rs  params.rs  run.rs  text.rs
crates/extract-calendar/tests/: extract_tests.rs
crates/extract-office/: Cargo.toml  README.md
crates/extract-office/examples/: gen_fixtures.rs
crates/extract-office/src/: detect.rs  docx.rs  error.rs  extract.rs  lib.rs  limits.rs  params.rs  pptx.rs  run.rs  text_buf.rs  xlsx.rs  zip_safe.rs
crates/extract-office/tests/: extract_tests.rs
crates/extract-pdf/: Cargo.toml  README.md
crates/extract-pdf/examples/: gen_pdf_fixtures.rs
crates/extract-pdf/src/: detect.rs  error.rs  extract.rs  lib.rs  limits.rs  params.rs  run.rs  text_buf.rs
crates/extract-pdf/tests/: extract_tests.rs
crates/extract-pst/: Cargo.toml  README.md
crates/extract-pst/src/: checkpoint.rs  error.rs  extract.rs  lib.rs  limits.rs  native_message.rs  open.rs  recipients.rs
crates/extract-pst/tests/: integration.rs
crates/extract-teams/: Cargo.toml  README.md
crates/extract-teams/src/: body.rs  bucket.rs  detect.rs  error.rs  html_parse.rs  json_parse.rs  lib.rs  limits.rs  params.rs  pst_enrich.rs  run.rs  sanitize.rs
crates/extract-teams/tests/: extract_tests.rs
crates/file-category/: Cargo.toml  README.md
crates/file-category/src/: category.rs  classify.rs  error.rs  extension.rs  lib.rs  magic.rs  mime_map.rs  params.rs  run.rs
crates/file-category/tests/: classify_job.rs
crates/ingest-purview/: Cargo.toml  README.md
crates/ingest-purview/src/: detect.rs  encoding.rs  error.rs  expand.rs  ingest.rs  lib.rs  limits.rs  path_safety.rs
crates/ingest-purview/tests/: integration.rs
crates/matter-ai/: Cargo.toml  README.md
crates/matter-ai/src/: error.rs  lib.rs  params.rs  parse.rs  prompt.rs  run.rs  secrets.rs  truncate.rs  verify.rs
crates/matter-ai/tests/: integration.rs
crates/matter-cluster/: Cargo.toml  README.md
crates/matter-cluster/src/: ctfidf.rs  error.rs  kmeans.rs  lib.rs  params.rs  prep.rs  run.rs  stopwords.rs  tfidf.rs  tokenize.rs
crates/matter-cluster/tests/: integration.rs
crates/matter-core/: Cargo.toml  README.md
crates/matter-core/src/: ai.rs  ai_verify.rs  audit.rs  calendar.rs  cas.rs  cas_backend.rs  category.rs  cluster.rs  conversation.rs  entity.rs  error.rs  filter.rs  gap.rs  item_errors.rs  jobs.rs  lang.rs  lib.rs  logical_hash.rs  matter.rs  multi_user.rs  ocr.rs  office.rs  overview.rs  pdf.rs  people.rs  privilege.rs  production_profile.rs  profile.rs  qc.rs  redaction.rs  report.rs  schema.rs  semantic.rs  sentiment.rs  teams.rs  thread_headers.rs  transcription.rs  workflow.rs
crates/matter-core/tests/: ai.rs  coding.rs  conversation.rs  encryption.rs  filter.rs  integration.rs  multi_user.rs  notes.rs  overview.rs  privilege.rs  production_profile.rs  profile.rs  redaction.rs  report.rs  workflow.rs
crates/matter-cull/: Cargo.toml  README.md
crates/matter-cull/src/: denist.rs  error.rs  eval.rs  family.rs  lib.rs  params.rs  presets.rs  rules.rs  run.rs
crates/matter-cull/tests/: integration.rs
crates/matter-dedupe/: Cargo.toml  README.md
crates/matter-dedupe/src/: error.rs  keys.rs  lib.rs  params.rs  policy.rs  run.rs
crates/matter-dedupe/tests/: integration.rs
crates/matter-entity/: Cargo.toml  README.md
crates/matter-entity/src/: error.rs  lib.rs  luhn.rs  mask.rs  params.rs  run.rs  scan.rs
crates/matter-entity/tests/: integration.rs
crates/matter-gap/: Cargo.toml  README.md
crates/matter-gap/src/: column_map.rs  compare.rs  dat_parse.rs  date_coverage.rs  error.rs  lib.rs  params.rs  report.rs  roster.rs  run.rs
crates/matter-gap/tests/: integration.rs
crates/matter-neardup/: Cargo.toml  README.md
crates/matter-neardup/src/: cluster.rs  error.rs  lib.rs  lsh.rs  minhash.rs  params.rs  run.rs  shingle.rs  tokenize.rs
crates/matter-neardup/tests/: integration.rs
crates/matter-people/: Cargo.toml  README.md
crates/matter-people/src/: error.rs  lib.rs  normalize.rs  params.rs  pass1.rs  pass2.rs  run.rs
crates/matter-people/tests/: integration.rs
crates/matter-platform/: Cargo.toml  README.md
crates/matter-platform/src/: error.rs  lib.rs  pmk.rs  sandbox.rs  schema.rs  tenant_key.rs
crates/matter-produce/: Cargo.toml  README.md
crates/matter-produce/src/: dat.rs  error.rs  layout.rs  lib.rs  params.rs  profile.rs  resolve.rs  run.rs
crates/matter-produce/tests/: integration.rs
crates/matter-promote/: Cargo.toml  README.md
crates/matter-promote/src/: error.rs  family.rs  lib.rs  order.rs  params.rs  policy.rs  run.rs
crates/matter-promote/tests/: integration.rs
crates/matter-qc/: Cargo.toml  README.md
crates/matter-qc/src/: error.rs  gate.rs  lib.rs  packs.rs  params.rs  report.rs  rules.rs  run.rs  select.rs
crates/matter-qc/tests/: integration.rs
crates/matter-search/: Cargo.toml  README.md
crates/matter-search/src/: compose.rs  encrypted_dir.rs  error.rs  index.rs  lib.rs  pack.rs  params.rs  query.rs  run.rs  schema.rs  tokenizer.rs
crates/matter-semantic/: Cargo.toml  README.md
crates/matter-sentiment/: Cargo.toml  README.md
crates/matter-service/: Cargo.toml  README.md
crates/matter-storage/: Cargo.toml  README.md
crates/ocr-plugin/: Cargo.toml  README.md
crates/process-runner/: Cargo.toml  README.md
(+441 files in other folders)
