[workspace]
resolver = "2"
members = [
    "crates/pst-reader",
    "crates/dedup-engine",
    "crates/pst-dedup-gui",
    "crates/pst-writer",
]

[workspace.dependencies]
# PST reader
byteorder = "1.5"
thiserror = "2"
crc32fast = "1.5"
tracing = "0.1"

# Dedup engine
sha2 = "0.11"
csv = "1.4"
chrono = "0.4"

# GUI
eframe = "0.34"
rfd = "0.17"

# Shared
tracing-subscriber = "0.3"
