[workspace]
resolver = "2"
members = [
    "crates/pst-reader",
    "crates/dedup-engine",
    "crates/pst-dedup-gui",
    "crates/pst-writer",
    "crates/pst-dedup-cli",
    "crates/matter-core",
    "crates/ingest-purview",
    "crates/extract-pst",
    "crates/process-runner",
    "crates/matter-dedupe",
    "crates/matter-thread",
    "crates/matter-neardup",
    "crates/matter-cull",
    "crates/matter-promote",
    "crates/matter-search",
    "crates/extract-office",
    "crates/extract-pdf",
    "crates/ocr-plugin",
    "crates/dedupe-desk",
    "crates/extract-calendar",
]

[workspace.dependencies]
# PST reader
byteorder = "1.5"
thiserror = "2"
crc32fast = "1.5"
tracing = "0.1"

# Dedup engine
sha2 = "0.11"
csv = "1.4"
chrono = "0.4"

# GUI
eframe = "0.34"
rfd = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Matter store
rusqlite = { version = "0.40", features = ["bundled", "functions"] }
camino = "1"

# FTS (track 0029) — pin 0.26.x (locks to 0.26.1)
tantivy = "0.26"

# Shared
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
