[workspace]
resolver = "2"
members = [
    "crates/pst-reader",
    "crates/dedup-engine",
    "crates/pst-dedup-gui",
    "crates/pst-writer",
    "crates/pst-dedup-cli",
    "crates/matter-core",
    "crates/ingest-purview",
    "crates/extract-pst",
    "crates/process-runner",
    "crates/matter-dedupe",
    "crates/matter-thread",
    "crates/matter-neardup",
    "crates/matter-cull",
    "crates/matter-promote",
    "crates/matter-produce",
    "crates/matter-qc",
    "crates/matter-gap",
    "crates/matter-search",
    "crates/extract-office",
    "crates/extract-pdf",
    "crates/ocr-plugin",
    "crates/stt-plugin",
    "crates/file-category",
    "crates/dedupe-desk",
    "crates/extract-calendar",
    "crates/extract-teams",
    "crates/matter-entity",
    "crates/matter-people",
    "crates/matter-cluster",
    "crates/matter-sentiment",
    "crates/matter-semantic",
    "crates/matter-ai",
    "crates/matter-service",
    "crates/matter-platform",
    "crates/matter-storage",
]

# OIDC client (track 0059) — pin 4.0.x, rustls via reqwest default features in openidconnect
# (declared on matter-service; listed here for workspace discoverability)

[workspace.dependencies]
# PST reader
byteorder = "1.5"
thiserror = "2"
crc32fast = "1.5"
tracing = "0.1"

# Dedup engine
sha2 = "0.11"
csv = "1.4"
chrono = "0.4"
chrono-tz = "0.10"

# GUI
eframe = "0.34"
rfd = "0.17"

# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Matter store
rusqlite = { version = "0.40", features = ["bundled", "functions"] }
camino = "1"
uuid = { version = "1", features = ["v4"] }

# Matter encryption at rest (track 0057) — pure-Rust; no SQLCipher/OpenSSL
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# FTS (track 0029) — pin 0.26.x (locks to 0.26.1)
tantivy = "0.26"

# Language detection (track 0054) — pure-Rust offline
whatlang = "0.18"

# Entity / PII packs (track 0046) — FA regex only (linear time; no ReDoS)
regex = "1"

# Shared
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
bytes = "1"

# Opt-in cloud object storage (track 0061) — feature-gated in matter-storage
object_store = { version = "0.14", default-features = false }

# AI provider (track 0051) — OpenAI-compatible HTTP + OS keyring
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "3"
