[package]
name = "dedup-engine"
version = "0.1.0"
edition = "2021"
description = "Email deduplication engine — tiered hashing, indexing, and reporting"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
sha2 = { workspace = true }
md-5 = { workspace = true }
csv = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pst-reader = { path = "../pst-reader" }

[dev-dependencies]
tempfile = { workspace = true }
