[package]
name = "dedupe-desk"
version = "0.1.0"
edition = "2021"
description = "Dedupe Desk — single-exe matter / sources / process shell"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dedupe-desk"
path = "src/main.rs"

[dependencies]
process-runner = { path = "../process-runner" }
matter-core = { path = "../matter-core" }
matter-search = { path = "../matter-search" }
eframe = { workspace = true }
rfd = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
# Only needed for `watch::Receiver` typing (process-runner progress bus).
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tempfile = { workspace = true }
