[package]
name = "extract-office"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust OOXML text extract (DOCX/XLSX/PPTX) + office_extract job"
license = "MIT OR Apache-2.0"

[dependencies]
matter-core = { path = "../matter-core" }
file-category = { path = "../file-category" }
calamine = "0.36.0"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
proptest = "1"
