[package]
name = "extract-pdf"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust PDF embedded-text extract + pdf_extract job (track 0034)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
file-category = { path = "../file-category" }
# Text extract; re-exports lopdf Document (lopdf 0.42.x transitive).
pdf-extract = "0.12.0"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
proptest = "1"
