[package]
name = "extract-pst"
version = "0.1.0"
edition = "2021"
description = "Blocking PST extractor: walk pst-reader → Normalized Items + logical_hash in matter-core"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
file-category = { path = "../file-category" }
pst-reader = { path = "../pst-reader" }
camino = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
