[package]
name = "extract-teams"
version = "0.1.0"
edition = "2021"
description = "Offline Teams/chat export adapters + teams_extract job (track 0055)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
file-category = { path = "../file-category" }
ammonia = "4"
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
