[package]
name = "matter-ai"
version = "0.1.0"
edition = "2021"
description = "Opt-in AI provider trait + first-pass code suggestions (track 0051)"
license = "MIT OR Apache-2.0"

[dependencies]
matter-core = { path = "../matter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
keyring = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
