[package]
name = "matter-cluster"
version = "0.1.0"
edition = "2021"
description = "Offline concept clustering: tfidf_kmeans_v1 + c-TF-IDF/ICF labels (track 0048)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
camino = { workspace = true }
