[package]
name = "matter-core"
version = "0.1.0"
edition = "2021"
description = "Matter store: SQLite metadata, content-addressable blob CAS, audit hash chain, jobs/checkpoints"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
csv = { workspace = true }
whatlang = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
fs4 = "0.13"
# Storage config types + BlobStore (default: no cloud SDKs).
# Optional `cloud-s3` enables matter-storage/cloud-s3 so open can activate S3 (fail closed without it).
matter-storage = { path = "../matter-storage" }
tempfile = { workspace = true }

[features]
default = []
# Opt-in: open S3 BlobStore when matters.storage_backend_json kind=s3.
# Desk stays offline (default features empty). CLI/service may enable for hosted pilots.
cloud-s3 = ["matter-storage/cloud-s3"]

[dev-dependencies]
tempfile = { workspace = true }
rusqlite = { workspace = true }
