[package]
name = "matter-cull"
version = "0.1.0"
edition = "2021"
description = "Matter-level flag-only data reduction: cull rules, presets, family policy, optional DeNIST"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
camino = { workspace = true }
