[package]
name = "matter-entity"
version = "0.1.0"
edition = "2021"
description = "Offline entity / PII regex packs: Luhn + mask/hash hits (track 0046)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
camino = { workspace = true }
