[package]
name = "matter-people"
version = "0.1.0"
edition = "2021"
description = "Offline people–comms graph: participants, directed edges, timeline (track 0047)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
matter-entity = { path = "../matter-entity" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
camino = { workspace = true }
