[package]
name = "matter-platform"
version = "0.1.0"
edition = "2021"
description = "Platform control plane: multi-tenant registry, IdP config (PMK AEAD), storage sandbox (track 0059)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
