[package]
name = "matter-produce"
version = "0.1.0"
edition = "2021"
description = "Matter-level production export: natives + text + Concordance DAT (review set produce)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
matter-qc = { path = "../matter-qc" }
dedup-engine = { path = "../dedup-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
camino = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sha2 = { workspace = true }
