[package]
name = "matter-qc"
version = "0.1.0"
edition = "2021"
description = "Pre-production QC rules: broken family, withhold, redacted text, missing native/text"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
