[package]
name = "matter-search"
version = "0.1.0"
edition = "2021"
description = "Per-matter Tantivy full-text keyword search (track 0029)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
tantivy = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
