[package]
name = "matter-sentiment"
version = "0.1.0"
edition = "2021"
description = "Offline VADER-class sentiment: vader_lexicon_v1 + unit-extreme (track 0049)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
vader-sentimental = { version = "0.1.3", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
camino = { workspace = true }
