[package]
name = "matter-service"
version = "0.1.0"
edition = "2021"
description = "Local multi-user matter HTTP service (track 0058) — one writer process, loopback by default"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[dependencies]
matter-core = { path = "../matter-core" }
axum = { version = "0.8", features = ["json", "macros"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
camino = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
serde_json = { workspace = true }
matter-core = { path = "../matter-core" }
camino = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
