[package]
name = "matter-service"
version = "0.1.0"
edition = "2021"
description = "Local multi-user matter HTTP service (track 0058) + optional platform OIDC SSO (0059)"
license = "LicenseRef-Proprietary"
license-file = "../../LICENSE"

[features]
default = []
# Opt-in S3 BlobStore activation on matter open (pass-through to matter-core).
cloud-s3 = ["matter-core/cloud-s3"]

[dependencies]
matter-core = { path = "../matter-core" }
matter-platform = { path = "../matter-platform" }
axum = { version = "0.8", features = ["json", "macros"] }
tower-http = { version = "0.7", features = ["trace", "cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
camino = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tracing = { workspace = true }
chrono = { workspace = true }
openidconnect = { version = "4.0", default-features = true, features = ["reqwest"] }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
http-body-util = "0.1"
axum = { version = "0.8", features = ["json", "macros"] }
serde_json = { workspace = true }
matter-core = { path = "../matter-core" }
matter-platform = { path = "../matter-platform" }
camino = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
