[package]
name = "ocr-plugin"
version = "0.1.0"
edition = "2021"
description = "Opt-in local OCR job (Tesseract CLI + mock engine) for Dedupe Desk (track 0036)"
license = "MIT OR Apache-2.0"

[dependencies]
matter-core = { path = "../matter-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
camino = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
