[package]
name = "process-runner"
version = "0.1.0"
edition = "2021"
description = "In-process matter job runner: single worker thread, cancel, watch progress"
license = "MIT OR Apache-2.0"

[features]
default = ["ingest", "extract_pst", "dedupe", "thread", "neardup", "cull", "promote", "fts", "office"]
ingest = ["dep:ingest-purview"]
extract_pst = ["dep:extract-pst"]
dedupe = ["dep:matter-dedupe"]
thread = ["dep:matter-thread"]
neardup = ["dep:matter-neardup"]
cull = ["dep:matter-cull"]
promote = ["dep:matter-promote"]
fts = ["dep:matter-search"]
office = ["dep:extract-office"]

[dependencies]
matter-core = { path = "../matter-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
ingest-purview = { path = "../ingest-purview", optional = true }
extract-pst = { path = "../extract-pst", optional = true }
matter-dedupe = { path = "../matter-dedupe", optional = true }
matter-thread = { path = "../matter-thread", optional = true }
matter-neardup = { path = "../matter-neardup", optional = true }
matter-cull = { path = "../matter-cull", optional = true }
matter-promote = { path = "../matter-promote", optional = true }
matter-search = { path = "../matter-search", optional = true }
extract-office = { path = "../extract-office", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
