[package]
name = "process-runner"
version = "0.1.0"
edition = "2021"
description = "In-process matter job runner: single worker thread, cancel, watch progress"
license = "MIT OR Apache-2.0"

[features]
default = ["ingest", "extract_pst", "dedupe", "thread", "neardup", "cull", "promote", "produce", "qc", "fts", "office", "pdf", "calendar", "ocr", "classify"]
ingest = ["dep:ingest-purview"]
extract_pst = ["dep:extract-pst"]
dedupe = ["dep:matter-dedupe"]
thread = ["dep:matter-thread"]
neardup = ["dep:matter-neardup"]
cull = ["dep:matter-cull"]
promote = ["dep:matter-promote"]
produce = ["dep:matter-produce"]
qc = ["dep:matter-qc"]
fts = ["dep:matter-search"]
office = ["dep:extract-office"]
pdf = ["dep:extract-pdf"]
calendar = ["dep:extract-calendar"]
ocr = ["dep:ocr-plugin"]
classify = ["dep:file-category"]
# Alias for feature name in docs / CI.
ics = ["calendar"]

[dependencies]
matter-core = { path = "../matter-core" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
ingest-purview = { path = "../ingest-purview", optional = true }
extract-pst = { path = "../extract-pst", optional = true }
matter-dedupe = { path = "../matter-dedupe", optional = true }
matter-thread = { path = "../matter-thread", optional = true }
matter-neardup = { path = "../matter-neardup", optional = true }
matter-cull = { path = "../matter-cull", optional = true }
matter-promote = { path = "../matter-promote", optional = true }
matter-produce = { path = "../matter-produce", optional = true }
matter-qc = { path = "../matter-qc", optional = true }
matter-search = { path = "../matter-search", optional = true }
extract-office = { path = "../extract-office", optional = true }
extract-pdf = { path = "../extract-pdf", optional = true }
extract-calendar = { path = "../extract-calendar", optional = true }
ocr-plugin = { path = "../ocr-plugin", optional = true }
file-category = { path = "../file-category", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
